--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "googleapis": "^39.2.0",
     "react": "^16.12.0",
     "react-big-calendar": "^0.23.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
     "react-google-calendar-api": "^1.0.11",
+    "react-google-slides": "^1.0.2",
     "react-router": "^3.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
